--- a/composer.json
+++ b/composer.json
@@ -17,13 +17,14 @@
         "issues": "https://github.com/fre5h/VichUploaderSerializationBundle/issues"
     },
     "require": {
-        "php": ">=5.4.0",
+        "php": ">=5.6.0",
         "symfony/symfony": "~2.7",
-	"vich/uploader-bundle": "dev-master",
-	"jms/serializer-bundle": "~1.1"
+        "doctrine/common": "~2.5",
+        "vich/uploader-bundle": "dev-master",
+        "jms/serializer-bundle": "~1.1"
     },
     "require-dev": {
-        "phpunit/phpunit": "~4.8",
+        "phpunit/phpunit": "~5.0",
         "squizlabs/php_codesniffer": "dev-master",
         "escapestudios/symfony2-coding-standard": "~2.7"
     },
