--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
     },
     "require": {
         "php": ">=5.6.0",
-        "symfony/symfony": ">=2.7",
+        "symfony/symfony": "~2.7|~3.0",
         "doctrine/orm": "~2.5",
         "vich/uploader-bundle": "dev-master",
         "jms/serializer-bundle": "~1.1"
