--- a/composer.json
+++ b/composer.json
@@ -31,6 +31,14 @@
     "autoload": {
         "psr-4": {
             "Fresh\\VichUploaderSerializationBundle\\": ""
+        },
+        "exclude-from-classmap": [
+            "/Tests/"
+        ]
+    },
+    "extra": {
+        "branch-alias": {
+            "dev-master": "1.0.x-dev"
         }
     }
 }
