--- a/composer.json
+++ b/composer.json
@@ -23,15 +23,15 @@
     },
     "require": {
         "php": ">=5.6.0",
-        "symfony/symfony": "~2.7|~3.0",
+        "symfony/symfony": "^2.7.13 || ^3.0.6",
         "doctrine/orm": "~2.5",
-        "vich/uploader-bundle": "~1.0",
+        "vich/uploader-bundle": "~1.1",
         "jms/serializer-bundle": "~1.1"
     },
     "require-dev": {
-        "phpunit/phpunit": "~5.1",
-        "squizlabs/php_codesniffer": "~2.5",
-        "escapestudios/symfony2-coding-standard": "~2.8"
+        "phpunit/phpunit": "5.3.*",
+        "squizlabs/php_codesniffer": "~2.6",
+        "escapestudios/symfony2-coding-standard": "~2.9"
     },
     "autoload": {
         "psr-4": {
