--- a/.travis.yml
+++ b/.travis.yml
@@ -11,16 +11,13 @@ env:
   - SYMFONY_VERSION=2.8.*
   - SYMFONY_VERSION=3.0.*
 
-allow_failures:
-  - php: hhvm
-
 before_script:
   - composer self-update
   - if [ "$SYMFONY_VERSION" != "" ]; then composer require "symfony/symfony:${SYMFONY_VERSION}" --no-update; fi;
   - composer install --dev --prefer-dist --no-interaction
 
 script:
-  - ./vendor/bin/phpcs ./ -p --encoding=utf-8 --extensions=php --ignore=vendor --standard=./vendor/escapestudios/symfony2-coding-standard/Symfony2
+  - ./vendor/bin/phpcs ./ -p --encoding=utf-8 --extensions=php --ignore=vendor --ignore=Tests --standard=./vendor/escapestudios/symfony2-coding-standard/Symfony2
   - ./vendor/bin/phpunit -c phpunit.xml.dist --coverage-clover=coverage.xml
 
 after_success:
