--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ env:
   - SYMFONY_VERSION=2.7.*
   - SYMFONY_VERSION=2.8.*
   - SYMFONY_VERSION=3.0.*
+  - SYMFONY_VERSION=3.1.*  
 
 before_script:
   - composer self-update
