--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,6 @@
 # Files and directories which won't be included in .zip archive during running `composer install --prefer-dist`
 
+/.github            export-ignore
 /.gitattributes     export-ignore
 /.gitignore         export-ignore
 /.scrutinizer.yml   export-ignore
