--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
     "license": "MIT",
     "authors": [
         {
-            "name": "Artem Genvald",
+            "name": "Artem Henvald",
             "email": "genvaldartem@gmail.com",
             "role": "Creator"
         },
@@ -29,9 +29,8 @@
         "jms/serializer-bundle": "~1.1 || ~2.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "5.6.*",
-        "squizlabs/php_codesniffer": "~2.7",
-        "escapestudios/symfony2-coding-standard": "~2.9"
+        "phpunit/phpunit": "5.7.*",
+        "escapestudios/symfony2-coding-standard": "~3.1"
     },
     "autoload": {
         "psr-4": {
