--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,19 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<phpunit backupGlobals="false"
-         backupStaticAttributes="false"
+<phpunit xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:noNamespaceSchemaLocation="http://schema.phpunit.de/5.7/phpunit.xsd"
          colors="true"
-         convertErrorsToExceptions="true"
-         convertNoticesToExceptions="true"
-         convertWarningsToExceptions="true"
-         processIsolation="false"
-         stopOnFailure="false"
-         syntaxCheck="false"
          bootstrap="vendor/autoload.php"
 >
-
     <testsuites>
-        <testsuite name="VichUploaderSerializationBundle Test Suite">
+        <testsuite name="DoctrineEnumBundle Test Suite">
             <directory>./Tests</directory>
         </testsuite>
     </testsuites>
