--- a/.travis.yml
+++ b/.travis.yml
@@ -17,13 +17,15 @@ env:
   - SYMFONY_VERSION=3.3.*
   - SYMFONY_VERSION=3.4.*
 
-before_script:
+before_install:
   - composer self-update
-  - if [ "$SYMFONY_VERSION" != "" ]; then composer require "symfony/symfony:${SYMFONY_VERSION}" --no-update; fi;
-  - composer install --dev --prefer-dist --no-interaction
+  - composer require --no-update symfony/symfony "$SYMFONY_VERSION"
+
+install:
+  - composer install --no-interaction --prefer-dist
 
 script:
-  - ./vendor/bin/phpcs ./ -p --encoding=utf-8 --extensions=php --ignore=vendor --ignore=Tests --standard=./vendor/escapestudios/symfony2-coding-standard/Symfony2
+  - ./vendor/bin/phpcs ./ -p --encoding=utf-8 --extensions=php --ignore="vendor|Tests" --standard=./vendor/escapestudios/symfony2-coding-standard/Symfony
   - ./vendor/bin/phpunit -c phpunit.xml.dist --coverage-clover=coverage.xml
 
 after_success:
