--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -1,11 +1,10 @@
 checks:
-  php:
-    code_rating: true
-    duplication: true
+  php: true
 
 filter:
   excluded_paths:
     - vendor/*
+    - Tests/*
 
 before_commands:
   - "composer install --prefer-dist"
