--- a/composer.json
+++ b/composer.json
@@ -22,15 +22,15 @@
         "issues": "https://github.com/fre5h/VichUploaderSerializationBundle/issues"
     },
     "require": {
-        "php": ">=5.6.0",
-        "symfony/symfony": "^2.7.13 || ^3.0.6",
-        "doctrine/orm": "~2.5",
-        "vich/uploader-bundle": "~1.1",
-        "jms/serializer-bundle": "~1.1 || ~2.0"
+        "php": ">=7.1.3",
+        "symfony/symfony": "^4.0",
+        "doctrine/orm": "^2.6",
+        "vich/uploader-bundle": "^1.6",
+        "jms/serializer-bundle": "^2.3"
     },
     "require-dev": {
-        "phpunit/phpunit": "5.7.*",
-        "escapestudios/symfony2-coding-standard": "~3.0"
+        "phpunit/phpunit": "6.5.*",
+        "escapestudios/symfony2-coding-standard": "^3.0"
     },
     "autoload": {
         "psr-4": {
@@ -42,7 +42,7 @@
     },
     "extra": {
         "branch-alias": {
-            "dev-master": "1.1.x-dev"
+            "dev-master": "2.0.x-dev"
         }
     }
 }
