--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
     },
     "require": {
         "php": ">=7.1.3",
-        "symfony/symfony": "^4.0",
+        "symfony/symfony": "^3.4 || ^4.0",
         "doctrine/orm": "^2.6",
         "vich/uploader-bundle": "^1.6",
         "jms/serializer-bundle": "^2.3"
