--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
     },
     "require": {
         "php": ">=7.1.3",
-        "symfony/symfony": "^3.4",
+        "symfony/symfony": "3.4.*",
         "doctrine/orm": "^2.6",
         "vich/uploader-bundle": "^1.6",
         "jms/serializer-bundle": "^2.3"
@@ -39,10 +39,5 @@
         "exclude-from-classmap": [
             "/Tests/"
         ]
-    },
-    "extra": {
-        "branch-alias": {
-            "dev-master": "2.0.x-dev"
-        }
     }
 }
