--- a/composer.json
+++ b/composer.json
@@ -22,8 +22,12 @@
         "issues": "https://github.com/fre5h/VichUploaderSerializationBundle/issues"
     },
     "require": {
-        "php": ">=7.1.3",
-        "symfony/symfony": "3.4.*",
+        "php": "^7.1.3",
+        "monolog/monolog": "^1.23",
+        "symfony/config": "^3.4 || ^4.0",
+        "symfony/dependency-injection": "^3.4 || ^4.0",
+        "symfony/property-access": "^3.4 || ^4.0",
+        "symfony/routing": "^3.4 || ^4.0",
         "doctrine/orm": "^2.6",
         "vich/uploader-bundle": "^1.6",
         "jms/serializer-bundle": "^2.3"
@@ -39,5 +43,10 @@
         "exclude-from-classmap": [
             "/Tests/"
         ]
+    },
+    "extra": {
+        "branch-alias": {
+            "dev-master": "2.x-dev"
+        }
     }
 }
