--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ php:
 
 env:
   - SYMFONY_VERSION=3.4.*
-  - SYMFONY_VERSION=4.0.*
+#  - SYMFONY_VERSION=4.0.*
 
 before_install:
   - composer self-update
