--- a/composer.json
+++ b/composer.json
@@ -22,15 +22,19 @@
         "issues": "https://github.com/fre5h/VichUploaderSerializationBundle/issues"
     },
     "require": {
-        "php": ">=5.6.0",
-        "symfony/symfony": "^2.7.13 || ^3.0.6",
-        "doctrine/orm": "~2.5",
-        "vich/uploader-bundle": "~1.1",
-        "jms/serializer-bundle": "~1.1 || ~2.0"
+        "php": "^7.1.3",
+        "monolog/monolog": "^1.23",
+        "symfony/config": "^3.4 || ^4.0",
+        "symfony/dependency-injection": "^3.4 || ^4.0",
+        "symfony/property-access": "^3.4 || ^4.0",
+        "symfony/routing": "^3.4 || ^4.0",
+        "doctrine/common": "^2.8",
+        "vich/uploader-bundle": "^1.7",
+        "jms/serializer-bundle": "^2.3"
     },
     "require-dev": {
-        "phpunit/phpunit": "5.7.*",
-        "escapestudios/symfony2-coding-standard": "~3.0"
+        "phpunit/phpunit": "6.5.*",
+        "escapestudios/symfony2-coding-standard": "^3.0"
     },
     "autoload": {
         "psr-4": {
@@ -40,9 +44,14 @@
             "/Tests/"
         ]
     },
+    "autoload-dev": {
+        "psr-4": {
+            "Fresh\\VichUploaderSerializationBundle\\Tests\\": "Tests/"
+        }
+    },
     "extra": {
         "branch-alias": {
-            "dev-master": "1.1.x-dev"
+            "dev-master": "2.x-dev"
         }
     }
 }
