--- a/composer.json
+++ b/composer.json
@@ -34,7 +34,8 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^6.5",
-        "escapestudios/symfony2-coding-standard": "^3.0"
+        "escapestudios/symfony2-coding-standard": "^3.0",
+        "squizlabs/php_codesniffer": "^3.3"
     },
     "autoload": {
         "psr-4": {
