--- a/composer.json
+++ b/composer.json
@@ -30,12 +30,13 @@
         "symfony/routing": "^3.4 || ^4.0",
         "doctrine/common": "^2.9",
         "vich/uploader-bundle": "^1.8",
-        "jms/serializer-bundle": "^2.4"
+        "jms/serializer-bundle": "^2.4|^3.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^7.3",
         "escapestudios/symfony2-coding-standard": "^3.4",
-        "squizlabs/php_codesniffer": "^3.3"
+        "squizlabs/php_codesniffer": "^3.3",
+        "symfony/yaml": "^4.2"
     },
     "autoload": {
         "psr-4": {
