--- a/composer.json
+++ b/composer.json
@@ -36,7 +36,7 @@
         "phpunit/phpunit": "^8.4",
         "escapestudios/symfony2-coding-standard": "^4.3",
         "squizlabs/php_codesniffer": "^3.5",
-        "symfony/yaml": "^4.3",
+        "symfony/yaml": "^4.3"
     },
     "autoload": {
         "psr-4": {
