--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ php:
 env:
   - SYMFONY_VERSION=3.4.*
   - SYMFONY_VERSION=4.3.*
+  - SYMFONY_VERSION=4.4.*  
 
 before_install:
   - composer self-update
