--- a/composer.json
+++ b/composer.json
@@ -22,20 +22,20 @@
         "issues": "https://github.com/fre5h/VichUploaderSerializationBundle/issues"
     },
     "require": {
-        "php": "^7.1.3",
-        "monolog/monolog": "^2.0",
-        "symfony/config": "^3.4 || ^4.3",
-        "symfony/dependency-injection": "^3.4 || ^4.3",
-        "symfony/property-access": "^3.4 || ^4.3",
-        "symfony/routing": "^3.4 || ^4.3",
+        "php": "^7.2.5",
+        "monolog/monolog": "^1.25",
+        "symfony/config": "^4.4",
+        "symfony/dependency-injection": "^4.4",
+        "symfony/property-access": "^4.4",
+        "symfony/routing": "^4.4",
         "doctrine/common": "^2.9",
         "vich/uploader-bundle": "^1.8",
-        "jms/serializer-bundle": "^2.4|^3.0"
+        "jms/serializer-bundle": "^3.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^8.4",
-        "escapestudios/symfony2-coding-standard": "^3.9",
-        "symfony/yaml": "^4.3"
+        "escapestudios/symfony2-coding-standard": "^3.10",
+        "symfony/yaml": "^4.4"
     },
     "autoload": {
         "psr-4": {
