--- a/.gitattributes
+++ b/.gitattributes
@@ -6,5 +6,6 @@
 /.scrutinizer.yml   export-ignore
 /.styleci.yml       export-ignore
 /.travis.yml        export-ignore
+/phpstan.neon       export-ignore
 /phpunit.xml.dist   export-ignore
 /Tests              export-ignore
