--- a/composer.json
+++ b/composer.json
@@ -23,19 +23,23 @@
     },
     "require": {
         "php": "^7.2.5",
-        "monolog/monolog": "^1.25",
-        "symfony/config": "^4.4",
-        "symfony/dependency-injection": "^4.4",
-        "symfony/property-access": "^4.4",
-        "symfony/routing": "^4.4",
         "doctrine/common": "^2.9",
-        "vich/uploader-bundle": "^1.8",
-        "jms/serializer-bundle": "^3.0"
+        "jms/serializer-bundle": "^3.0",
+        "monolog/monolog": "^2.0",
+        "symfony/config": "^5.0",
+        "symfony/dependency-injection": "^5.0",
+        "symfony/property-access": "^5.0",
+        "symfony/routing": "^5.0",
+        "vich/uploader-bundle": "^1.12"
     },
     "require-dev": {
-        "phpunit/phpunit": "^8.4",
         "escapestudios/symfony2-coding-standard": "^3.10",
-        "symfony/yaml": "^4.4"
+        "phpstan/phpstan": "^0.12",
+        "phpstan/phpstan-doctrine":"^0.12",
+        "phpstan/phpstan-phpunit": "^0.12",
+        "phpunit/phpunit": "^8.4",
+        "symfony/phpunit-bridge": "^5.0",
+        "symfony/yaml": "^5.0"
     },
     "autoload": {
         "psr-4": {
@@ -44,6 +48,9 @@
         "exclude-from-classmap": [
             "/Tests/"
         ]
+    },
+    "config": {
+        "sort-packages": true
     },
     "autoload-dev": {
         "psr-4": {
