--- a/composer.json
+++ b/composer.json
@@ -23,17 +23,17 @@
     },
     "require": {
         "php": "^7.1.3",
-        "monolog/monolog": "^2.0",
+        "monolog/monolog": "^1.25 || ^2.0",
         "symfony/config": "^3.4 || ^4.3",
         "symfony/dependency-injection": "^3.4 || ^4.3",
         "symfony/property-access": "^3.4 || ^4.3",
         "symfony/routing": "^3.4 || ^4.3",
         "doctrine/common": "^2.9",
         "vich/uploader-bundle": "^1.8",
-        "jms/serializer-bundle": "^2.4|^3.0"
+        "jms/serializer-bundle": "^2.4 || ^3.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^8.4",
+        "phpunit/phpunit": "^8.5",
         "escapestudios/symfony2-coding-standard": "^3.9",
         "symfony/yaml": "^4.3"
     },
