--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
         {
             "name": "Community",
             "homepage": "https://github.com/fre5h/VichUploaderSerializationBundle/graphs/contributors",
-            "role": "Developers"
+            "role": "Contributors"
         }
     ],
     "support": {
@@ -22,20 +22,25 @@
         "issues": "https://github.com/fre5h/VichUploaderSerializationBundle/issues"
     },
     "require": {
-        "php": "^7.1.3",
-        "monolog/monolog": "^1.25 || ^2.0",
-        "symfony/config": "^3.4 || ^4.3",
-        "symfony/dependency-injection": "^3.4 || ^4.3",
-        "symfony/property-access": "^3.4 || ^4.3",
-        "symfony/routing": "^3.4 || ^4.3",
-        "doctrine/common": "^2.9",
-        "vich/uploader-bundle": "^1.8",
-        "jms/serializer-bundle": "^2.4 || ^3.0"
+        "php": "^7.2.5",
+        "doctrine/common": "^2.11",
+        "doctrine/persistence": "^1.3",
+        "jms/serializer-bundle": "^3.0",
+        "monolog/monolog": "^2.0",
+        "symfony/config": "^5.0",
+        "symfony/dependency-injection": "^5.0",
+        "symfony/property-access": "^5.0",
+        "symfony/routing": "^5.0",
+        "vich/uploader-bundle": "^1.12"
     },
     "require-dev": {
+        "escapestudios/symfony2-coding-standard": "^3.10",
+        "phpstan/phpstan": "^0.12",
+        "phpstan/phpstan-doctrine":"^0.12",
+        "phpstan/phpstan-phpunit": "^0.12",
         "phpunit/phpunit": "^8.5",
-        "escapestudios/symfony2-coding-standard": "^3.9",
-        "symfony/yaml": "^4.3"
+        "symfony/phpunit-bridge": "^5.0",
+        "symfony/yaml": "^5.0"
     },
     "autoload": {
         "psr-4": {
@@ -49,5 +54,8 @@
         "psr-4": {
             "Fresh\\VichUploaderSerializationBundle\\Tests\\": "Tests/"
         }
+    },
+    "config": {
+        "sort-packages": true
     }
 }
