--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
     },
     "require": {
         "php": "^7.2.5",
-        "doctrine/common": "^2.11",
+        "doctrine/common": "^2.11|^3.0",
         "doctrine/persistence": "^1.3",
         "jms/serializer-bundle": "^3.0",
         "monolog/monolog": "^2.0",
