--- a/.travis.yml
+++ b/.travis.yml
@@ -8,15 +8,15 @@ cache:
     - $HOME/symfony-bridge/.phpunit
 
 php:
-  - 7.2
   - 7.3
   - 7.4
 
 env:
   global:
     - PHPUNIT_FLAGS="-v"
-    - SYMFONY_PHPUNIT_DIR="$HOME/symfony-bridge/.phpunit"
   jobs:
+    - SYMFONY_VERSION=5.2.*
+    - SYMFONY_VERSION=5.1.*
     - SYMFONY_VERSION=5.0.*
 
 stages:
@@ -31,24 +31,24 @@ jobs:
   include:
     # Composer validation
     - stage: composer validation
-      php: 7.2
-      env: SYMFONY_VERSION=5.0.*
+      php: 7.4
+      env: SYMFONY_VERSION=5.2.*
       script:
         - composer validate --strict --no-check-lock
     # Code style
     - stage: code style
-      php: 7.2
-      env: SYMFONY_VERSION=5.0.*
+      php: 7.4
+      env: SYMFONY_VERSION=5.2.*
       script: ./vendor/bin/phpcs ./ -p --encoding=utf-8 --extensions=php --ignore="vendor|Tests" --standard=./vendor/escapestudios/symfony2-coding-standard/Symfony
     # PHPStan analyze
     - stage: static analyze
-      php: 7.2
-      env: SYMFONY_VERSION=5.0.*
-      script: ./vendor/bin/phpstan analyse -l 7 --no-progress -c phpstan.neon ./
+      php: 7.4
+      env: SYMFONY_VERSION=5.2.*
+      script: ./vendor/bin/phpstan analyse -l 8 --no-progress -c phpstan.neon ./
     # Code coverage with Codecov.io
     - stage: code coverage
-      php: 7.2
-      env: COVERAGE=true SYMFONY_VERSION=5.0.*
+      php: 7.4
+      env: COVERAGE=true SYMFONY_VERSION=5.2.*
       script:
         - ./vendor/bin/phpunit -c phpunit.xml.dist --coverage-clover=coverage.xml
       after_script:
@@ -65,7 +65,7 @@ install:
   - composer install --no-interaction --prefer-dist
 
 script:
-  - ./vendor/bin/simple-phpunit $PHPUNIT_FLAG -c phpunit.xml.dist
+  - ./vendor/bin/phpunit $PHPUNIT_FLAG -c phpunit.xml.dist
 
 notifications:
   email:
