--- a/composer.json
+++ b/composer.json
@@ -22,24 +22,23 @@
         "issues": "https://github.com/fre5h/VichUploaderSerializationBundle/issues"
     },
     "require": {
-        "php": "^7.2.5",
+        "php": ">=7.3.0",
         "doctrine/common": "^2.11|^3.0",
         "doctrine/persistence": "^1.3|^2.0",
-        "jms/serializer-bundle": "^3.0",
+        "jms/serializer-bundle": "^3.7",
         "monolog/monolog": "^2.0",
         "symfony/config": "^5.0",
         "symfony/dependency-injection": "^5.0",
         "symfony/property-access": "^5.0",
         "symfony/routing": "^5.0",
-        "vich/uploader-bundle": "^1.12"
+        "vich/uploader-bundle": "^1.16"
     },
     "require-dev": {
-        "escapestudios/symfony2-coding-standard": "^3.10",
+        "escapestudios/symfony2-coding-standard": "^3.11",
         "phpstan/phpstan": "^0.12",
         "phpstan/phpstan-doctrine":"^0.12",
         "phpstan/phpstan-phpunit": "^0.12",
         "phpunit/phpunit": "^8.5",
-        "symfony/phpunit-bridge": "^5.0",
         "symfony/yaml": "^5.0"
     },
     "autoload": {
