--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
     },
     "require": {
         "php": ">=7.3.0",
+        "doctrine/cache": "^2.0",
         "doctrine/common": "^2.11|^3.0",
         "doctrine/persistence": "^1.3|^2.0",
         "jms/serializer-bundle": "^3.7",
