--- a/composer.json
+++ b/composer.json
@@ -23,22 +23,23 @@
     },
     "require": {
         "php": ">=7.4.0",
-        "doctrine/cache": "^1.11",
-        "doctrine/common": "^2.11|^3.0",
-        "doctrine/persistence": "^1.3|^2.0",
-        "jms/serializer-bundle": "^3.7",
-        "monolog/monolog": "^2.0",
+        "doctrine/cache": "^2.1",
+        "doctrine/common": "^3.2",
+        "doctrine/persistence": "2.2",
+        "jms/serializer-bundle": "^4.0",
+        "monolog/monolog": "^2.3",
         "symfony/config": "^5.0 || v6.0",
         "symfony/dependency-injection": "^5.0 || v6.0",
         "symfony/property-access": "^5.0 || v6.0",
         "symfony/routing": "^5.0 || v6.0",
-        "vich/uploader-bundle": "^1.16"
+        "vich/uploader-bundle": "^1.18"
     },
     "require-dev": {
         "escapestudios/symfony2-coding-standard": "^3.12",
-        "phpstan/phpstan": "^0.12",
-        "phpstan/phpstan-doctrine":"^0.12",
-        "phpstan/phpstan-phpunit": "^0.12",
+        "phpstan/phpstan": "^1.2",
+        "phpstan/phpstan-doctrine": "^1.0",
+        "phpstan/phpstan-phpunit": "^1.0",
+        "phpstan/phpstan-symfony": "^1.0",
         "phpunit/phpunit": "^9.5",
         "symfony/yaml": "^5.0 || v6.0"
     },
