--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
         "doctrine/cache": "^1.11",
         "doctrine/common": "^2.11|^3.0",
         "doctrine/persistence": "^1.3|^2.0",
-        "jms/serializer-bundle": "^3.7",
+        "jms/serializer-bundle": "^3.7|v4.0",
         "monolog/monolog": "^2.0",
         "symfony/config": "^5.0",
         "symfony/dependency-injection": "^5.0",
