Fix into update (#51)
* Update LICENSE

* Update composer.json (#46)

* Update dependencies for symfony 6 (#49)

* Update README.md

* Update README.md

* Update ci.yaml

* Update LICENSE

* Update ci.yaml

* Update README.md

---------

Co-authored-by: Uladzimir Sadkou <hofirma@gmail.com>

--- a/phpstan.neon
+++ b/phpstan.neon
@@ -8,6 +8,7 @@ parameters:
     excludePaths:
         - '%rootDir%/../../../Tests/*'
         - '%rootDir%/../../../vendor/*'
+        - './vendor/*'
     fileExtensions:
         - 'php'
     checkGenericClassInNonGenericObjectType: false
