--- a/composer.json
+++ b/composer.json
@@ -22,16 +22,16 @@
         "issues": "https://github.com/fre5h/VichUploaderSerializationBundle/issues"
     },
     "require": {
-        "php": ">=7.4.0",
+        "php": ">=8.0.0",
         "doctrine/cache": "^2.1",
         "doctrine/common": "^3.2",
         "doctrine/persistence": "2.2",
-        "jms/serializer-bundle": "^4.0",
+        "jms/serializer-bundle": "^5.0",
         "monolog/monolog": "^2.3",
-        "symfony/config": "^5.0 || v6.0",
-        "symfony/dependency-injection": "^5.0 || v6.0",
-        "symfony/property-access": "^5.0 || v6.0",
-        "symfony/routing": "^5.0 || v6.0",
+        "symfony/config": "^6.0",
+        "symfony/dependency-injection": "^6.0",
+        "symfony/property-access": "^6.0",
+        "symfony/routing": "^6.0",
         "vich/uploader-bundle": "^1.18"
     },
     "require-dev": {
@@ -41,7 +41,7 @@
         "phpstan/phpstan-phpunit": "^1.0",
         "phpstan/phpstan-symfony": "^1.0",
         "phpunit/phpunit": "^9.5",
-        "symfony/yaml": "^5.0 || v6.0"
+        "symfony/yaml": "^6.0"
     },
     "autoload": {
         "psr-4": {
