--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -12,7 +12,7 @@ jobs:
     name: "Composer Validate"
     steps:
       - name: 'Checkout Code'
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
 
       - name: 'Validate composer.json'
         run: composer validate --no-check-all --strict --no-check-lock
@@ -23,7 +23,7 @@ jobs:
     name: "Composer Install"
     steps:
       - name: 'Checkout Code'
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
 
       - name: 'Install Dependencies'
         run: composer install --prefer-dist --no-progress --no-interaction
@@ -36,7 +36,7 @@ jobs:
       fail-fast: false
     steps:
       - name: 'Checkout Code'
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
 
       - name: 'Setup PHP'
         uses: shivammathur/setup-php@v2
@@ -61,7 +61,7 @@ jobs:
       fail-fast: false
     steps:
       - name: 'Checkout Code'
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
 
       - name: 'Setup PHP'
         uses: shivammathur/setup-php@v2
@@ -86,23 +86,14 @@ jobs:
       fail-fast: false
       matrix:
         php-version:
-          - '7.3'
-          - '7.4'
-          - '8.0'
-          - '8.1'
           - '8.2'
         symfony-version:
-          - '5.0'
-          - '5.1'
-          - '5.2'
-          - '5.3'
-          - '5.4'
-          - '6.0'
-          - '6.1'
           - '6.2'
+          - '6.3'
+          - '6.4'
     steps:
       - name: 'Checkout Code'
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
 
       - name: 'Setup PHP'
         uses: shivammathur/setup-php@v2
@@ -129,7 +120,7 @@ jobs:
       fail-fast: false
     steps:
       - name: 'Checkout Code'
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
 
       - name: 'Setup PHP'
         uses: shivammathur/setup-php@v2
@@ -147,13 +138,15 @@ jobs:
         run: ./vendor/bin/phpunit -v -c phpunit.xml.dist --coverage-clover=coverage.xml
 
       - name: 'Download Coverage Files'
-        uses: actions/download-artifact@v2
+        uses: actions/download-artifact@v4
         with:
           path: reports
 
       - name: 'Upload to Codecov'
-        uses: codecov/codecov-action@v1
+        uses: codecov/codecov-action@v4
         with:
           files: ./coverage.xml
           fail_ci_if_error: true
+          flags: unittests
           verbose: true
+          token: ${{ secrets.CODECOV_TOKEN }}
